# code-assist-extensions

./: .env.example  .gitignore  .mcp.json  README.md  WORKLOG.md  pyproject.toml
configs/: codex.toml  gemini.json
features/: 2026-02-12-shopping-assistant.md
research/: claude-mcp.md  codex-mcp.md  gemini-mcp.md
shopping_tool/: __init__.py  __main__.py  browser.py  element_resolver.py  output_sanitizer.py  server.py
shopping_tool/actions/: __init__.py  search.py
shopping_tool/llm/: __init__.py  base.py  openrouter.py
shopping_tool/profile/: __init__.py  crypto.py  manager.py  schema.py
shopping_tool/scrapers/: __init__.py  amazon.py  base.py
tests/: conftest.py  test_profile_crypto.py  test_sanitizer.py  test_scrapers.py  test_server.py
